--- a/estilo/style.css
+++ b/estilo/style.css
@@ -21,6 +21,22 @@ header nav div img {
     height: 80px;
 }
 
+header nav div img{
+    animation-name: fade-in;
+    animation-duration: 1s;
+    animation-delay: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease;
+}
+@keyframes fade-in {
+    0% {
+        transform: translatex(-200px);
+        opacity: 0;
+        
+        background-color: aquamarine;
+    } 
+}
+
 .nombre-pagina {
     font-size: 50px;
 }
