--- a/estilo/style.css
+++ b/estilo/style.css
@@ -310,17 +310,18 @@ main {
 
 /* -------media queries fotos ------- */
 
-@media screen and (max-width: 1329px) {
+@media screen and (max-width: 1315px) {
     nav {
-        flex-direction: column;
+        justify-content: space-between;
         margin: 20px 20px;
         font-size: 5px;
 
     }
+    
 
 }
 
-@media screen and (max-width: 1118px) {
+@media screen and (max-width: 1335px) {
     .galeria {
         width: 100%;
         margin: auto;
@@ -332,11 +333,13 @@ main {
     }
 
     header nav ul {
-        display: none;
+        display: block;
+        bottom: 50px;
+       
     }
 
     .nombre-pagina {
-        font-size: 15px;
+        font-size: 40px;
     }
 
 }
@@ -384,7 +387,7 @@ main {
 
 @media screen and (max-width: 1315px) {
     header nav ul {
-        display: none;
+        /*display: none;*/
     }
 
     .parrafo {
