--- a/estilo/style.css
+++ b/estilo/style.css
@@ -8,19 +8,28 @@
 /* ------------Encabezado---------- */
 
 
+
 header {
     width: 100%;
+    
 }
 
 header nav div {
     display: flex;
     align-items: center;
 }
-
-header nav div img {
+.logo-img {
     height: 80px;
+    animation-name: fade-in;
+    animation-duration: 1s;
+    animation-delay: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease;
 }
 
+header nav div img{
+    height: 80px;
+}
 header nav div img{
     animation-name: fade-in;
     animation-duration: 1s;
@@ -62,8 +71,8 @@ header nav ul li a:hover{
 }
 
 
-header nav ul {
-    display: flex;
+header nav div {
+    display: flex ;
     list-style: none;
 
 }
@@ -73,7 +82,7 @@ header nav ul li a {
     color: rgb(24, 21, 21);
     font-size: 25px;
     margin: 75px;
-}
+}*/
 
 
 
@@ -389,7 +398,7 @@ main {
 
 @media screen and (max-width: 1315px) {
     header nav ul {
-        
+     
     }
 
     .parrafo {
