--- a/estilo/style.css
+++ b/estilo/style.css
@@ -8,14 +8,14 @@
 /* ------------Encabezado---------- */
 
 
-header {
+/*header {
     width: 100%;
-}
+}*/
 
-header nav div {
+/*header nav div {
     display: flex;
     align-items: center;
-}
+}*/
 
 header nav div img {
     height: 80px;
@@ -37,32 +37,39 @@ header nav div img{
     } 
 }
 
-.nombre-pagina {
-    font-size: 50px;
-}
 
 
-header nav {
+header nav div ul{
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100px;
+    
+   
     background-color: rgba(255, 255, 255, 0.479);
 
 
 }
-.nombre-pagina:hover {
-    color: rgba(95, 233, 238, 0.418);
-
+.logo-messi{
+    font-size: 30px;
+    margin: 30px;
+    color: black;
+}
+.logo-messi:hover {
+    color: rgba(141, 190, 192, 0.904);
+   
+    
 
 }
-header nav ul li a:hover{
-    color: rgb(174, 174, 211);
+.nav-link:hover{
+    color: rgb(245, 16, 16);
 }
 
 
-header nav ul {
+
+
+/*header nav ul {
     display: flex;
     list-style: none;
 
@@ -72,8 +79,8 @@ header nav ul li a {
     text-decoration: none;
     color: rgb(24, 21, 21);
     font-size: 25px;
-    margin: 75px;
-}
+    margin: 85px;
+}*/
 
 
 
@@ -310,15 +317,11 @@ main {
 
 /* -------media queries fotos ------- */
 
-@media screen and (max-width: 1315px) {
-    nav {
-        justify-content: space-between;
-        margin: 20px 20px;
-        font-size: 5px;
-
-    }
-    
-
+@media screen and (max-width: 993px) {
+ 
+    header nav div ul{
+        font-size: 10px;
+       }
 }
 
 @media screen and (max-width: 1335px) {
@@ -332,15 +335,11 @@ main {
 
     }
 
-    header nav ul {
-        display: block;
-        
-       
-    }
+   
 
-    .nombre-pagina {
+    /*.nombre-pagina {
         font-size: 39px;
-    }
+    }*/
 
 }
 
@@ -365,6 +364,9 @@ main {
             "izquierda"
             "derecha";
     }
+    .logo-messi{
+        display: none;
+    }
 }
 
 @media screen and (max-width: 601px) {
@@ -383,18 +385,27 @@ main {
     }
 
 }
+@media screen and (max-width: 439px){
+    .logo-messi{
+        display: none;
+    }
+}
 
 /* -----media queries biografia--------- */
 
 
 @media screen and (max-width: 1315px) {
-    header nav ul {
-<<<<<<< HEAD
-        /*display: none;*/
-=======
+
         
->>>>>>> animaciones
+
+    
+    nav {
+        justify-content: space-between;
+        margin: 15px 15px;
+        font-size: 20px;
+
     }
+    
 
     .parrafo {
         z-index: 1;
