--- a/estilo/style.css
+++ b/estilo/style.css
@@ -302,11 +302,12 @@ main {
 
 
 #mapa {
-    display: block;
+    display: flex;
     text-align: center;
     align-items: center;
     justify-content: center;
-    font-size: 50px;
+    
+   
 }
 
 .parrafo-2 {
